# llvm-cource

./: .gitignore
1/: README.md  app.ll  main.c  meson.build  parser.py  sim.c  sim.h
1/include/: meson.build  sim.h
1/passes/: TracePass.cpp  meson.build  pass.cpp
1/samples/: app.ll  trace
1/src/: IRCreator.cpp  app.c  app.cpp  log.c  main.cpp  meson.build  sim.cpp
